--- a/Universal_chassis/platformio.ini
+++ b/Universal_chassis/platformio.ini
@@ -16,3 +16,6 @@ framework = arduino
 monitor_speed = 115200
 ;设置上传速度为最大
 upload_speed = 921600
+lib_deps = 
+    knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.1.0
