添加里程计,基本准确,然后现在测试无问题,控制流畅.控制管理器任务变为了串行实现

--- a/Universal_chassis/platformio.ini
+++ b/Universal_chassis/platformio.ini
@@ -16,6 +16,8 @@ framework = arduino
 monitor_speed = 115200
 ;设置上传速度为最大
 upload_speed = 921600
+board_microros_transport = wifi
 lib_deps = 
     knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.1.0
+    https://github.com/micro-ROS/micro_ros_platformio
